@@ -1,3 +1,8 @@
+2011-10-31 Roman
+- !:UI.VCAEngine: Document's archive realisation is changed to full use DB, remove item's attributes
+    (replaced by single current archive document attribute "aDoc") and expand archive's limit size to 1000000.
+
+
 2011-10-31 Maxim
 - FIX:UI.Vision: Unnecessary calls of the "shapeSave" function are removed in the primitive ElFigure to optimize the performance and UnDo/ReDo functions.
 
